Bug 447204 - Task manager offers to launch new instance of kcmshell and systemsettings
Summary: Task manager offers to launch new instance of kcmshell and systemsettings
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-18 20:21 UTC by Nicolas Fella
Modified: 2021-12-25 00:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2021-12-18 20:21:54 UTC
STEPS TO REPRODUCE
1. Run kcmshell5 autostart or kcmshell5 kdeconnect 
2. Right-click on the task manager icon
3. Click "Start new instance"

OBSERVED RESULT
for kdeconnect nothing happens
for autostart the error "The file or folder kcmshell doesn't exist" appears


EXPECTED RESULT
KCMs are inherently single-instance so it should not offer to launch a new instance in the first place.
The same applies to systemsettings, which is also a single instance app


SOFTWARE/OS VERSIONS
Everything master
Comment 1 Nicolas Fella 2021-12-18 20:57:26 UTC
With https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1288 and https://invent.kde.org/plasma/kde-cli-tools/-/merge_requests/25 clicking "New instance" on a kcmshell window opens systemsettings with that KCM, which is a bit less broken than showing an error but is still quite odd
Comment 2 Bug Janitor Service 2021-12-18 21:35:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1289
Comment 3 Friedrich W. H. Kossebau 2021-12-21 19:50:49 UTC
*** Bug 429428 has been marked as a duplicate of this bug. ***
Comment 4 Nicolas Fella 2021-12-25 00:19:36 UTC
Git commit c58e5433436393e2b437ccb34f375b5aacb6419c by Nicolas Fella.
Committed on 25/12/2021 at 00:11.
Pushed by nicolasfella into branch 'master'.

[libtaskmanager] Prevent launching a new instance of services with NoDisplay=true

It is not possible for the user to launch such an app from the UI, so we should not allow to launch a new instance from the task manager context menu.

M  +15   -0    libtaskmanager/tasktools.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/c58e5433436393e2b437ccb34f375b5aacb6419c