[libtaskmanager] Prevent launching a new instance of services with NoDisplay=true

It is not possible for the user to launch such an app from the UI, so we should not allow to launch a new instance from the task manager context menu.

BUG: 447204